Промежуточная версия перед добавлением админки

--- a/recipe_site/recipes/templates/recipes/add_recipe.html
+++ b/recipe_site/recipes/templates/recipes/add_recipe.html
@@ -8,22 +8,6 @@
 
 {% block content %}
 <div class="container">
-    <div class="banner">
-        <header>
-            <h1>Сайт рецептов НямВилль</h1>
-            <nav style="margin-right: 17px;">
-                <a href="{% url 'index' %}">Главная</a>
-                {% if user.is_authenticated %}
-                    <a href="{% url 'add_recipe' %}">Добавить рецепт</a>
-                    <a href="{% url 'logout' %}">Выход</a>
-                {% else %}
-                    <a href="{% url 'login' %}">Вход</a>
-                    <a href="{% url 'register' %}">Регистрация</a>
-                {% endif %}
-            </nav>
-        </header>
-    </div>
-    
     <div class="card p-4 shadow" style="margin-top: 20px;">
         <h2 class="text-center mb-4">Добавить новый рецепт</h2>
         <form method="post" enctype="multipart/form-data">
@@ -74,7 +58,7 @@
         </form>
     </div>
     
-    <footer>
+    <footer style="margin-top: 20px;">
         <p>&copy; 2025 NomVille - Все права защищены</p>
     </footer>
 </div>
