--- a/recipe_site/recipes/templates/recipes/recipe_details.html
+++ b/recipe_site/recipes/templates/recipes/recipe_details.html
@@ -6,22 +6,6 @@
 {% block content %}
 
 <div class="container">
-    <div class="banner">
-        <header>
-            <h1>Сайт рецептов НямВилль</h1>
-            <nav style="margin-right: 17px;">
-                <a href="{% url 'index' %}">Главная</a>
-                {% if user.is_authenticated %}
-                    <a href="{% url 'add_recipe' %}">Добавить рецепт</a>
-                    <a href="{% url 'logout' %}">Выход</a>
-                {% else %}
-                    <a href="{% url 'login' %}">Вход</a>
-                    <a href="{% url 'register' %}">Регистрация</a>
-                {% endif %}
-            </nav>
-        </header>
-    </div>
-
     <main>
         <div class="recipe-details" style="margin-top: 20px;">
             <div class="recipe-image">
@@ -79,7 +63,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer style="margin-top: 20px;">
         <p>&copy; 2025 NomVille - Все права защищены</p>
     </footer>
 </div>
