--- a/recipe_site/recipes/templates/recipes/layout.html
+++ b/recipe_site/recipes/templates/recipes/layout.html
@@ -9,33 +9,58 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css">
     {% block styles %}{% endblock %}
+    <style>
+        .banner {
+            background: url('{% static "recipes/img/banner.png" %}') center/cover no-repeat;
+            padding: 20px 0;
+            text-align: center;
+            color: #333;
+        }
+        .banner h1 {
+            font-family: 'Pattaya', sans-serif;
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+        .banner nav a {
+            margin: 0 15px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: #333;
+            text-decoration: none;
+        }
+        .banner nav a:hover {
+            color: #000;
+        }
+        @media (max-width: 768px) {
+            .banner h1 {
+                font-size: 2rem;
+            }
+            .banner nav a {
+                font-size: 1rem;
+                margin: 0 10px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="banner">
+    <div class="banner" style="margin-top: 0px;padding-top: 10px;">
         <header class="container py-3">
             <h1>Сайт рецептов НямВилль</h1>
-            <nav style="margin-right: 17px;">
+            <nav>
                 <a href="{% url 'index' %}">Главная</a>
-
                 {% if user.is_authenticated %}
                     <a href="{% url 'add_recipe' %}">Добавить рецепт</a>
                     <a href="{% url 'logout' %}">Выход</a>
                 {% else %}
-                    <!-- Обычная ссылка для неавторизованных пользователей -->
                     <a href="#" id="add-recipe-link" data-bs-toggle="modal" data-bs-target="#authModal">Добавить рецепт</a>
-                    <a href="{% url 'login' %}" id="login-link">Вход</a>
-                    <a href="{% url 'register' %}">Регистрация</a>
+                    <a href="#" id="authLink" data-bs-toggle="modal" data-bs-target="#authModal">Вход</a>
                 {% endif %}
             </nav>
         </header>
     </div>
-
     {% block content %}{% endblock %}
-
-    <!-- Модальное окно для авторизации -->
     <div class="modal" tabindex="-1" id="authModal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -53,21 +78,32 @@
             </div>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zyS3R6x9aErGGQ2vX4R5GkzFZp8kboA2pz7K5pXg" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const addRecipeLink = document.getElementById('add-recipe-link');
+            const authLink = document.getElementById('authLink');
             if (addRecipeLink) {
                 addRecipeLink.addEventListener('click', function(event) {
-                    event.preventDefault(); // предотвращаем переход по ссылке
+                    event.preventDefault();
                     var myModal = new bootstrap.Modal(document.getElementById('authModal'));
                     myModal.show();
                 });
             }
+            if (authLink) {
+                authLink.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    var myModal = new bootstrap.Modal(document.getElementById('authModal'));
+                    myModal.show();
+                });
+            }
+            var modalElement = document.getElementById('authModal');
+            var modal = new bootstrap.Modal(modalElement);
+            modalElement.addEventListener('hidden.bs.modal', function () {
+                modal.dispose();  // This will properly dispose the modal instance when it's closed
+            });
         });
     </script>
     {% endblock %}
