--- a/recipe_site/recipes/templates/recipes/layout.html
+++ b/recipe_site/recipes/templates/recipes/layout.html
@@ -102,7 +102,7 @@
             var modalElement = document.getElementById('authModal');
             var modal = new bootstrap.Modal(modalElement);
             modalElement.addEventListener('hidden.bs.modal', function () {
-                modal.dispose();  // This will properly dispose the modal instance when it's closed
+                modal.dispose();
             });
         });
     </script>
