--- a/recipe_site/recipes/templates/recipes/edit_recipe.html
+++ b/recipe_site/recipes/templates/recipes/edit_recipe.html
@@ -26,7 +26,7 @@
                 {% if field.name != "steps" %}
                     <div class="mb-3">
                         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                        {{ field }}  <!-- Поле будет уже с классом form-control -->
+                        {{ field }}
                         {% if field.errors %}
                             <div class="invalid-feedback">
                                 {% for error in field.errors %}
